# advanced_dso

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md
benchmark/: bm_pixel_operate.cpp  bm_select.cpp
include/: CommonInclude.hpp  camera.hpp  database.hpp  frame.hpp  full_system.hpp  image.hpp  image_reader.hpp  keyframe.hpp  photometric_jacobian_generator.hpp  point.hpp  response_model.hpp  select.hpp  vignette_model.hpp
include/ImageIntensity/: ImageAndExposure.hpp
include/module/: CommonInclude.hpp  Dimension.hpp  Eigen.hpp  GlobalUtil.hpp
include/module/Database/: Database.hpp
include/module/Image/: Camera.hpp  ExposureTimeEstimator.hpp  Feature.hpp  Frame.hpp  Grid.hpp  Pixel.hpp  PixelSelector.hpp  Point.hpp  ResponseModel.hpp  VignetteModel.hpp
include/module/Optimize/: JacobianGenerator.hpp
include/module/Util/: ImageReader.hpp  Logging.hpp  Util.hpp
include/util/: dim.hpp  eigen.hpp  grid.hpp  logging.hpp  pixel_operate.hpp  tbb.hpp  viz.hpp
module/: basic_data_structure.py
module/Image/: Frame.cpp  Point.cpp  ResponseModel.cpp  VignetteModel.cpp
module/Util/: CameraModel.cpp  ImageReader.cpp
module_test/: TestFrame.cpp  TestImageAndExposure.cpp  TestImageReader.cpp  TestSolve.cpp
play/: play_selector.cpp
python_module/: basic_data_structure.py  basic_gamma_and_histogram.py  coarse_initializer.py  ii_image.py  image.py  image_segmentation.py  pixel_selector.py  segmentation.py  test_exposure_effect.py  tmp.py  util.py
src/: frame.cpp  image.cpp  image_reader.cpp  main.cpp  point.cpp  select.cpp
test/: test_and_bm.cpp  test_database.cpp  test_frame.cpp  test_image_reader.cpp  test_pixel_operate.cpp  test_response_model.cpp  test_selector.cpp  test_vignette_model.cpp
util/: bilinear_interpolation.py
